##############################################################################
# Cmake
##############################################################################

cmake_minimum_required(VERSION 2.8.3)
project(ecl_command_line)

##############################################################################
# Catkin
##############################################################################

find_package(catkin)
catkin_package(
        INCLUDE_DIRS include
        )

##############################################################################
# Actual project configuration
##############################################################################

add_subdirectory(include)
add_subdirectory(src)



