<?xml version="1.0"?>
<package>
  <name>ecl_command_line</name>
  <version>0.61.18</version>
  <description>
     Embeds the TCLAP library inside the ecl. This is a very convenient
     command line parser in templatised c++.
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/ecl_command_line</url>
  <url type="repository">https://github.com/stonier/ecl_core</url>
  <url type="bugtracker">https://github.com/stonier/ecl_core/issues</url>
  <author email="d.stonier@gmail.com">Daniel Stonier</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ecl_license</build_depend>
  <run_depend>ecl_license</run_depend>
</package>


