<?xml version="1.0"?>
<package format="2">
  <name>ecl_concepts</name>
  <version>0.61.18</version>
  <description>
     Introduces a compile time concept checking mechanism that can be used
     most commonly to check for required functionality when passing
     template arguments.
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/ecl_concepts</url>
  <url type="repository">https://github.com/stonier/ecl_core</url>
  <url type="bugtracker">https://github.com/stonier/ecl_core/issues</url>
  <author email="d.stonier@gmail.com">Daniel Stonier</author> -->

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <build_depend>ecl_license</build_depend>
  <build_depend>ecl_build</build_depend>
  <build_depend>ecl_config</build_depend>
  <build_depend>ecl_type_traits</build_depend>

  <exec_depend>ecl_license</exec_depend>
  <exec_depend>ecl_config</exec_depend>
  <exec_depend>ecl_type_traits</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>


