<?xml version="1.0"?>
<package>
  <name>ecl_concepts</name>
  <version>0.62.3</version>
  <description>
     Introduces a compile time concept checking mechanism that can be used
     most commonly to check for required functionality when passing
     template arguments.
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/ecl_concepts</url>
  <url type="repository">https://github.com/stonier/ecl_core</url>
  <url type="bugtracker">https://github.com/stonier/ecl_core/issues</url>
  <author email="d.stonier@gmail.com">Daniel Stonier</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ecl_license</build_depend>
  <build_depend>ecl_config</build_depend>
  <build_depend>ecl_type_traits</build_depend>
  <run_depend>ecl_license</run_depend>
  <run_depend>ecl_config</run_depend>
  <run_depend>ecl_type_traits</run_depend>
</package>


