<?xml version="1.0"?>
<package format="2">
  <name>ecl_containers</name>
  <version>1.2.1</version>
  <description>
    The containers included here are intended to extend the stl containers.
    In all cases, these implementations are designed to implement
    c++ conveniences and safety where speed is not sacrificed.

    Also includes techniques for memory debugging of common problems such
    as buffer overruns.
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/ecl_containers</url>
  <url type="repository">https://github.com/stonier/ecl_core</url>
  <url type="bugtracker">https://github.com/stonier/ecl_core/issues</url>
  <author email="d.stonier@gmail.com">Daniel Stonier</author> -->

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <build_depend>ecl_license</build_depend>
  <build_depend>ecl_build</build_depend>
  <build_depend>ecl_config</build_depend>
  <build_depend>ecl_errors</build_depend>
  <build_depend>ecl_exceptions</build_depend>
  <build_depend>ecl_formatters</build_depend>
  <build_depend>ecl_converters</build_depend>
  <build_depend>ecl_mpl</build_depend>
  <build_depend>ecl_type_traits</build_depend>
  <build_depend>ecl_utilities</build_depend>

  <exec_depend>ecl_license</exec_depend>
  <exec_depend>ecl_config</exec_depend>
  <exec_depend>ecl_errors</exec_depend>
  <exec_depend>ecl_exceptions</exec_depend>
  <exec_depend>ecl_formatters</exec_depend>
  <exec_depend>ecl_converters</exec_depend>
  <exec_depend>ecl_mpl</exec_depend>
  <exec_depend>ecl_type_traits</exec_depend>
  <exec_depend>ecl_utilities</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>


