<?xml version="1.0"?>
<package format="2">
  <name>ecl_converters</name>
  <version>1.2.1</version>
  <description>
     Some fast/convenient type converters, mostly for char strings or strings.
     These are not really fully fleshed out, alot of them could use the addition for
     the whole range of fundamental types (e.g. all integers, not just int, unsigned int).

     They will come as the need arises.
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/ecl_converters</url>
  <url type="repository">https://github.com/stonier/ecl_core</url>
  <url type="bugtracker">https://github.com/stonier/ecl_core/issues</url>
  <author email="d.stonier@gmail.com">Daniel Stonier</author> -->

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <build_depend>ecl_license</build_depend>
  <build_depend>ecl_build</build_depend>
  <build_depend>ecl_config</build_depend>
  <build_depend>ecl_errors</build_depend>
  <build_depend>ecl_exceptions</build_depend>
  <build_depend>ecl_mpl</build_depend>
  <build_depend>ecl_type_traits</build_depend>
  <build_depend>ecl_concepts</build_depend>

  <exec_depend>ecl_license</exec_depend>
  <exec_depend>ecl_concepts</exec_depend>
  <exec_depend>ecl_config</exec_depend>
  <exec_depend>ecl_errors</exec_depend>
  <exec_depend>ecl_exceptions</exec_depend>
  <exec_depend>ecl_mpl</exec_depend>
  <exec_depend>ecl_type_traits</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>


