<package>
  <name>ecl_core</name>
  <version>0.61.17</version>
  <description>
    A set of tools and interfaces extending the capabilities of c++ to 
    provide a lightweight, consistent interface with a focus for control
    programming.
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="website">http://www.ros.org/wiki/ecl_core</url>
  <url type="repository">https://github.com/stonier/ecl_core</url>
  <url type="bugtracker">https://github.com/stonier/ecl_core/issues</url>
  <author email="d.stonier@gmail.com">Daniel Stonier</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>ecl_command_line</run_depend>
  <run_depend>ecl_concepts</run_depend>
  <run_depend>ecl_containers</run_depend>
  <run_depend>ecl_converters</run_depend>
  <run_depend>ecl_core_apps</run_depend>
  <run_depend>ecl_devices</run_depend>
  <run_depend>ecl_eigen</run_depend>
  <run_depend>ecl_exceptions</run_depend>
  <run_depend>ecl_formatters</run_depend>
  <run_depend>ecl_geometry</run_depend>
  <run_depend>ecl_ipc</run_depend>
  <run_depend>ecl_linear_algebra</run_depend>
  <run_depend>ecl_math</run_depend>
  <run_depend>ecl_mpl</run_depend>
  <run_depend>ecl_sigslots</run_depend>
  <run_depend>ecl_statistics</run_depend>
  <run_depend>ecl_streams</run_depend>
  <run_depend>ecl_threads</run_depend>
  <run_depend>ecl_time</run_depend>
  <run_depend>ecl_type_traits</run_depend>
  <run_depend>ecl_utilities</run_depend> 

  <export>
    <metapackage/>
  </export>
</package>
