<?xml version="1.0"?>
<package>
  <name>ecl_core_apps</name>
  <version>0.61.17</version>
  <description>
     This includes a suite of programs demo'ing various aspects of the
     ecl_core. It also includes various benchmarking and utility programs for
     use primarily with embedded systems.
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/ecl_core_apps</url>
  <url type="repository">https://github.com/stonier/ecl_core</url>
  <url type="bugtracker">https://github.com/stonier/ecl_core/issues</url>
  <author email="d.stonier@gmail.com">Daniel Stonier</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ecl_build</build_depend>
  <build_depend>ecl_license</build_depend>
  <build_depend>ecl_config</build_depend>
  <build_depend>ecl_linear_algebra</build_depend>
  <build_depend>ecl_command_line</build_depend>
  <build_depend>ecl_converters</build_depend>
  <build_depend>ecl_containers</build_depend>
  <build_depend>ecl_devices</build_depend>
  <build_depend>ecl_errors</build_depend>
  <build_depend>ecl_exceptions</build_depend>
  <build_depend>ecl_formatters</build_depend>
  <build_depend>ecl_geometry</build_depend>
  <build_depend>ecl_ipc</build_depend>
  <build_depend>ecl_sigslots</build_depend>
  <build_depend>ecl_streams</build_depend>
  <build_depend>ecl_threads</build_depend>
  <build_depend>ecl_type_traits</build_depend>
  <build_depend>ecl_time_lite</build_depend>
  
  <run_depend>ecl_build</run_depend>
  <run_depend>ecl_license</run_depend>
  <run_depend>ecl_config</run_depend>
  <run_depend>ecl_linear_algebra</run_depend>
  <run_depend>ecl_command_line</run_depend>
  <run_depend>ecl_converters</run_depend>
  <run_depend>ecl_containers</run_depend>
  <run_depend>ecl_devices</run_depend>
  <run_depend>ecl_errors</run_depend>
  <run_depend>ecl_exceptions</run_depend>
  <run_depend>ecl_formatters</run_depend>
  <run_depend>ecl_geometry</run_depend>
  <run_depend>ecl_ipc</run_depend>
  <run_depend>ecl_sigslots</run_depend>
  <run_depend>ecl_streams</run_depend>
  <run_depend>ecl_threads</run_depend>
  <run_depend>ecl_type_traits</run_depend>
  <run_depend>ecl_time_lite</run_depend>
</package>


